# worklog

./: .env.example  .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  install.sh  pyproject.toml  release-please-config.json
.claude/: feature-plan.local.md  workflow-state.local.md
.claude/quality/: accessibility.md  performance.md  security.md  type-safety.md
.claude/verification/: runtime-results.md
.github/workflows/: release-please.yml  release.yml  rust.yml
.qa-report/: QA-REPORT.md
.qa-report/wave-1/: code-analysis.md  project-scan.md  test-results.md
.qa-report/wave-2/: edge-cases.md
docs/: MIGRATION.md  UX-OVERHAUL.md
rust/: Cargo.toml  Justfile  README.md
rust/crates/worklog-cli/: Cargo.toml
rust/crates/worklog-cli/src/: cli.rs  daemon_client.rs  lib.rs  main.rs  style.rs  wizard.rs
rust/crates/worklog-cli/src/week_view/: mod.rs  render.rs  run.rs  state.rs
rust/crates/worklog-cli/tests/: cli.rs  daemon.rs
rust/crates/worklog-core/: Cargo.toml
rust/crates/worklog-core/sql/: schema.sql
rust/crates/worklog-core/src/: block_service.rs  browser.rs  daemon.rs  daemon_service.rs  db.rs  estimate.rs  git.rs  hook.rs  hook_run.rs  http.rs  infer.rs  lib.rs  models.rs  paths.rs  personal.rs  purge.rs  repo.rs  schedule.rs  secrets.rs  sessions.rs  skill.rs  tz.rs  web.rs
rust/crates/worklog-core/src/collectors/: gcal.rs  github.rs  jira.rs  mod.rs  tempo.rs
rust/crates/worklog-core/src/updater/: crypto.rs  delta.rs  fetch.rs  install.rs  manifest.rs  mod.rs  pubkey.rs  signing.rs
rust/crates/worklog-core/src/web/: fetch.rs
rust/crates/worklog-core/templates/: docker-compose.yml
rust/crates/worklog-core/tests/: env_fallback.rs
rust/hook/: Cargo.toml
rust/hook/src/: classify.rs  config.rs  db.rs  main.rs  sessions.rs
rust/hook/tests/: hook_integration.rs
scripts/: release-smoke.sh
skills/worklog/: SKILL.md
skills/worklog/references/: api-reference.md  recipes.md  state-machine.md  troubleshooting.md
src/worklog/: __init__.py  classify.py  cli.py  config.py  db.py  estimate.py  infer.py  infer_persist.py  schema.sql  sessions.py  tempo.py
src/worklog/collectors/: claude.py  gcal.py  github.py  jira_.py
src/worklog/web/: app.py
src/worklog/web/static/: style.css
src/worklog/web/templates/: index.html
tests/: test_classify.py  test_claude_hook.py  test_config.py  test_doctor.py  test_estimate.py  test_gcal.py  test_infer.py  test_infer_persist.py  test_schema.py  test_schema_v2.py  test_sessions.py  test_tempo_blocks.py  test_upgrade.py  test_web.py
tests/install/: smoke.sh
web/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  next.config.mjs  package.json  tsconfig.tsbuildinfo
web/app/: actions.test.ts  actions.ts  error.tsx  globals.css  layout.tsx  page.tsx
web/app/[day]/: page.tsx
web/app/week/: page.tsx
web/app/week/[monday]/: page.tsx
web/components/: ActionBar.tsx  BlockCard.tsx  CommitList.tsx  DayHeader.tsx  EmptyState.tsx  EstBadge.tsx  EventList.tsx  SourceBadges.tsx  ThemeToggle.tsx  TicketCombobox.tsx  Toast.tsx  ToastHost.tsx  WeekGrid.tsx  WeekHeader.tsx  WeekJumper.tsx
web/lib/: daemon.ts  db.test.ts  db.ts  format-event.test.ts  format-event.ts  format.test.ts  format.ts  theme.test.ts  theme.ts  toast.test.ts  toast.ts  types.test.ts  types.ts
