[project]
name = "worklog"
version = "0.1.0"
description = "Unified work-time tracker: aggregates Claude Code, GitHub, Google Calendar, and Jira activity into a reviewable log, then syncs to Tempo."
readme = "README.md"
authors = [
    { name = "TomasPalsson", email = "tomas2212042710@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "google-api-python-client>=2.194.0",
    "google-auth-oauthlib>=1.3.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "jira>=3.10.5",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.26",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.24.1",
    "types-pyyaml>=6.0.12.20260408",
    "uvicorn[standard]>=0.44.0",
]

[project.scripts]
worklog = "worklog:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
