[workspace]
resolver = "2"
members = ["crates/worklog-core", "crates/worklog-cli"]

[workspace.package]
version = "0.3.0-dev"
edition = "2021"
rust-version = "1.82"
license = "MIT"
authors = ["Tomas Palsson <tomas@p5.is>"]
repository = "https://github.com/TomasPalsson/worklog"

[workspace.dependencies]
anyhow      = "1"
thiserror   = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
rusqlite    = { version = "0.31", features = ["bundled", "chrono"] }
chrono      = { version = "0.4", features = ["serde"] }
clap        = { version = "4.5", features = ["derive", "env"] }
dirs        = "5"
toml        = "0.8"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring     = "3"
tempfile    = "3"
assert_cmd  = "2"
predicates  = "3"
dialoguer   = { version = "0.11", default-features = false, features = ["password"] }
console     = "0.15"
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "fs", "sync"] }
axum        = { version = "0.7", default-features = false, features = ["json", "tokio", "http1"] }
hyper       = { version = "1", features = ["server", "http1"] }
hyper-util  = { version = "0.1", features = ["tokio", "server", "service"] }
tower       = { version = "0.5", features = ["util"] }
tower-http  = { version = "0.6", features = ["trace"] }

# Stage 5: signed updater
ed25519-dalek = { version = "2", features = ["rand_core", "pem", "pkcs8"] }
sha2        = "0.10"
zstd        = "0.13"
qbsdiff     = "1"
rand        = "0.8"
base64      = "0.22"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
opt-level     = 3
