[package]
name = "worklog-hook"
version = "0.1.0"
edition = "2021"
description = "Fast Rust Claude Code hook for worklog — writes events to SQLite with <15ms startup."
publish = false

[[bin]]
name = "worklog-hook"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
serde-saphyr = "0.0"
regex = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
