[package]
name         = "worklog-cli"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "worklog — CLI binary."

[[bin]]
name = "worklog"
path = "src/main.rs"

[dependencies]
worklog-core = { path = "../worklog-core" }
anyhow      = { workspace = true }
clap        = { workspace = true }
chrono      = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd  = { workspace = true }
predicates  = { workspace = true }
tempfile    = { workspace = true }
