[package]
name         = "worklog-cli"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "worklog — CLI binary."

[[bin]]
name = "worklog"
path = "src/main.rs"

[dependencies]
worklog-core = { path = "../worklog-core" }
anyhow      = { workspace = true }
clap        = { workspace = true }
chrono      = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
dialoguer   = { workspace = true }
console     = { workspace = true }
indicatif   = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
tokio       = { workspace = true }
miette      = { workspace = true }
comfy-table = { workspace = true }
ratatui     = { workspace = true }
crossterm   = { workspace = true }

[dev-dependencies]
assert_cmd  = { workspace = true }
predicates  = { workspace = true }
tempfile    = { workspace = true }
rusqlite    = { workspace = true }
