[package]
name         = "worklog-core"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Shared data layer for worklog — db, models, secrets, paths."

[dependencies]
anyhow      = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
rusqlite    = { workspace = true }
chrono      = { workspace = true }
dirs        = { workspace = true }
toml        = { workspace = true }
tracing     = { workspace = true }
reqwest     = { workspace = true }
base64      = { workspace = true }
urlencoding = "2"
regex       = "1"

# Stage 5 — signed updater.
ed25519-dalek = { workspace = true }
sha2        = { workspace = true }
zstd        = { workspace = true }
qbsdiff     = { workspace = true }
rand        = { workspace = true }

# Stage 3.2: axum IPC server bits. Used by the daemon only — unit tests
# on the block service don't need any of these.
tokio       = { workspace = true }
axum        = { workspace = true }
hyper       = { workspace = true }
hyper-util  = { workspace = true }
tower       = { workspace = true }
tower-http  = { workspace = true }
[target.'cfg(target_os = "macos")'.dependencies]
keyring     = { workspace = true, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring     = { workspace = true, features = ["linux-native", "sync-secret-service", "crypto-rust"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring     = { workspace = true, features = ["windows-native"] }

[dev-dependencies]
tempfile    = { workspace = true }
httpmock    = "0.7"
